login on mobile fix

--- a/htdocs/css/fILL-media.1.0.css
+++ b/htdocs/css/fILL-media.1.0.css
@@ -71,7 +71,7 @@ and (max-width : 65em)
 	padding: .3em;
 	font-size: 1.4em;
 	padding-left:.7em;
-	width: 90%;
+	width: auto;
     }
     
     #search-container {
